--- a/index.css
+++ b/index.css
@@ -1,24 +1,16 @@
 html, body {
     max-width: 100%;
     overflow-x: hidden;
-   
-
-   
-
 }
  body{
  	  margin:0;
  	  padding:0;
- 	   background: #001122 ;
+ 	  background: #001122 ;
  	  background-size: cover;
  	  background-position: center;
  	  font-family: sans-serif;
  	  font-size: 17px;
- 	
- 	 
-
- }	 
- 
+ }
 .navbar-brand{
     padding: 0;
  }
@@ -32,10 +24,7 @@ font-family: "Segoe UI",Roboto,Arial,sans-serif;
   height: 46px;
   margin-left: 0vw;
   padding:0vw; 
-
  }
-
- 
 .clock {
     font-size:1.5vw; 
     color: #ffffff;
@@ -49,22 +38,17 @@ font-family: "Segoe UI",Roboto,Arial,sans-serif;
     background-color: #1c1c1f;
     box-shadow: inset 0 0 5px 2px black;
     margin-left: 33vw;
-
-  
   }
-  
 .clock span {
     position: relative;
     display: inline-block;
     width: 1.8vw;
     font-family:Advent Pro;
     overflow: hidden;
-
   }
-  
 .clock span:nth-child(2),
 .clock span:nth-child(4) {
-    border-right: 1px solid rgb(0, 0, 0);
+    border-right: 1px solid white;
   }
   
 .clock span:before,
@@ -98,18 +82,12 @@ font-family: "Segoe UI",Roboto,Arial,sans-serif;
     transform: translate3d(0,0,0);
   }
 
-
-
-
 #ho{
-	color : white;
-
-		
+	color : white;		
 }
 
 #ru{
 	color : white ;	
- 
 }
 
 #abt{
@@ -157,6 +135,10 @@ font-family: "Segoe UI",Roboto,Arial,sans-serif;
   margin-top: 8vh;
   padding-top: 1.7vh;
   border-radius: 10px;
+  cursor: pointer;
+}
+#op1:focus-within{
+  background-color: #00AACC;
 }
 #op2{
   height: 8vh;
@@ -164,7 +146,11 @@ font-family: "Segoe UI",Roboto,Arial,sans-serif;
   margin-top: 2.5vh;
   padding-top: 1.7vh;
   border-radius: 10px;
-  
+  cursor: pointer; 
+}
+#op2:focus{
+  background-color: #00AACC;
+  color:#001122;
 }
 #op3{
   height: 8vh;
@@ -172,6 +158,11 @@ font-family: "Segoe UI",Roboto,Arial,sans-serif;
   margin-top: 2.5vh;
   padding-top: 1.7vh;
   border-radius: 10px;
+  cursor: pointer;
+}
+#op3:focus{
+  background-color: #00AACC;
+  color:#001122;
 }
 #op4{
   height: 8vh;
@@ -179,6 +170,11 @@ font-family: "Segoe UI",Roboto,Arial,sans-serif;
   margin-top: 2.5vh;
   padding-top: 1.7vh;
   border-radius: 10px;
+  cursor: pointer;
+}
+#op4:focus{
+  background-color: #00AACC;
+  color:#001122;
 }
 #btn{
   margin-top: 1.3vh;
@@ -193,21 +189,21 @@ font-family: "Segoe UI",Roboto,Arial,sans-serif;
 #questionoption{
   overflow: auto;
   height: 75.5vh;
-  margin-top: 3.1vh;
+  margin-top: 1.1vh;
 }
 #q1{
   height: 6vh;
   overflow: auto;
   color: white;
   text-align: center;
+  margin-top:0.1vw;
 
 }
-.questionnumber{
+a.questionnumber{
   color: white;
-
+  text-decoration: none;
+  padding-top:2vw;
 }
-
-
 footer{
 background-color:  rgba(0,0,0,0.3);
 font-family: "Segoe UI",Roboto,Arial,sans-serif;
@@ -239,11 +235,8 @@ img{
 #ft2{
   display: inline-block;
   position: relative;    
-  margin-left: 1vw;
-  
+  margin-left: 1vw; 
 }
-
-
 }
 
 @media (max-width: 426px) {
@@ -257,13 +250,12 @@ img{
 }
 footer{
   margin-top: 60vh;
-
 }
 #ft1{
   display: inline-block;
   position: relative;    
   margin-left: 0vw;
-  font-size: 1rem;
+  font-size: 15px;
 
 }
 img{
@@ -342,9 +334,45 @@ img{
 #pag{  
    margin-left: 8.5vw;
    margin-top: 3vh;
-       }
+ }
+ .qno{
+  background-color: #001122;
+  color:white;
+ }
 #credenzlogo{
   width: 85px;
+}
+@media (max-width: 376px){
+  #pag{
+    font-size: small;
+  }
+  #ft1{
+    font-size: 13.75px;
+  }
+  #ft2{
+    font-size: 13.75px;
+  }
+  .log{
+    height:30px;
+    width:85px;
+  }
+}
+@media (max-width:361px){
+  #pag{
+    font-size: small;
+    margin-left:5.8vw;
+  }
+  #ft1{
+    font-size: 13.5px;
+  }
+  #ft2{
+    font-size: 13.5px;
+  }
+  .log{
+    height:25px;
+    width:70px;
+  }
+  
 }
  
 }
