--- a/index.css
+++ b/index.css
@@ -824,6 +824,9 @@ position: relative;
    #btn{
   width: 7vw;
 }
+#ft1{
+    margin-left: 15.2vw;
+  }
 
 }
 @media (min-width:1024px){
@@ -835,6 +838,9 @@ position: relative;
   }
   #questionoption{
     height: 74vh;
+  }
+   #ft1{
+    margin-left: 15.9vw;
   }
 
 }
