--- a/index.css
+++ b/index.css
@@ -4,12 +4,21 @@ html, body {
 }
  body{
  	  margin:0;
- 	  padding:0;
- 	  background: #001122 ;
- 	  background-size: cover;
- 	  background-position: center;
+    padding:0;
+    background-image:url(bgs.jpg);
+    background-size: cover;
+    background-position: center;
  	  font-family: sans-serif;
- 	  font-size: 17px;
+    font-size: 17px;
+ }
+ body::before{
+   content:"";
+   position: absolute;
+   left:0;
+   top:0;
+   width:100vw;
+   height:100vh;
+   backdrop-filter:blur(3px);
  }
  .pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus {
   background-color:white !important; 
@@ -22,7 +31,7 @@ html, body {
     padding: 0;
  }
  #navbar{
-background: rgba(0,0,0,0.3);
+background: rgba(0,0,0,0.8);
 font-family: "Segoe UI",Roboto,Arial,sans-serif;
 }
 #credenzlogo{
@@ -45,7 +54,8 @@ font-family: "Segoe UI",Roboto,Arial,sans-serif;
     box-sizing: border-box;
     background-color: #1c1c1f;
     box-shadow: inset 0 0 5px 2px black;
-    margin-left: 33vw;
+    left:4%;
+    border:1px solid whitesmoke;
   }
 .clock span {
     position: relative;
@@ -117,6 +127,7 @@ font-family: "Segoe UI",Roboto,Arial,sans-serif;
   margin-left: 3vw;
   border-radius: 10px;
   padding-left: 4vw;
+  background-color:#001122;
 }
 #imagerow{
   height: 58vh;
@@ -143,6 +154,7 @@ font-family: "Segoe UI",Roboto,Arial,sans-serif;
   padding-top: 1.7vh;
   border-radius: 10px;
   cursor: pointer;
+  background-color:#001122;
 }
 #op1:focus{
   background-color: #00AACC;
@@ -155,6 +167,7 @@ font-family: "Segoe UI",Roboto,Arial,sans-serif;
   padding-top: 1.7vh;
   border-radius: 10px;
   cursor: pointer; 
+  background-color:#001122;
 }
 #op2:focus{
   background-color: #00AACC;
@@ -167,6 +180,7 @@ font-family: "Segoe UI",Roboto,Arial,sans-serif;
   padding-top: 1.7vh;
   border-radius: 10px;
   cursor: pointer;
+  background-color:#001122;
 }
 #op3:focus{
   background-color: #00AACC;
@@ -179,41 +193,50 @@ font-family: "Segoe UI",Roboto,Arial,sans-serif;
   padding-top: 1.7vh;
   border-radius: 10px;
   cursor: pointer;
+  background-color:#001122;
 }
 #op4:focus{
   background-color: #00AACC;
   color:#001122;
 }
 #btn{
-  margin-top: 1.3vh;
+  margin-top: 1.5vh;
   height: 6vh;
-  padding-top: 0vh;
-  border-radius: 2px;
- 
+  border-radius: 4px;
   border:none;
   outline: none;
   width: 8vw;
+  background-color: #fa7c07;
+  color:white;
+  text-align: center;
+  justify-content: center;
 }
 #questionoption{
   overflow: auto;
-  height: 75.5vh;
-  margin-top: 1.1vh;
+  height: 78vh;
+  padding-top:1vw;
 }
 #q1{
   height: 6vh;
   overflow: auto;
   color: white;
   text-align: center;
-  margin-top:0.1vw;
-
+  justify-content: center;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: #001122;
+}
+#q1:focus{
+  background-color: #00AACC;
+  color:#001122;
 }
 a.questionnumber{
   color: white;
   text-decoration: none;
-  padding-top:2vw;
 }
+
 footer{
-background-color:  rgba(0,0,0,0.3);
+background-color:  rgba(0,0,0,0.8);
 font-family: "Segoe UI",Roboto,Arial,sans-serif;
 font-size: 1.25rem;
 
