--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ html, body {
  body{
  	  margin:0;
     padding:0;
-    background-image:url(bgs.jpg);
+    background: linear-gradient(-180deg,#00AACC,#001122);
     background-size: cover;
     background-position: center;
  	  font-family: sans-serif;
