--- a/index.css
+++ b/index.css
@@ -39,7 +39,8 @@ font-family: "Segoe UI",Roboto,Arial,sans-serif;
   width: 130px;
   height: 46px;
   margin-left: 0vw;
-  padding:0vw; 
+  padding:0vw;
+
  }
 .clock {
     font-size:1.5vw; 
@@ -55,7 +56,7 @@ font-family: "Segoe UI",Roboto,Arial,sans-serif;
     background-color: #1c1c1f;
     box-shadow: inset 0 0 5px 2px black;
     left:4%;
-    border:1px solid whitesmoke;
+    
   }
 .clock span {
     position: relative;
@@ -347,9 +348,8 @@ img{
   height: 27vh;
   overflow: auto;
   padding-top: 1vh;
-  margin-top: 0.5vh;
-  width: 2vw;
-  margin-left: 4vw;
+  margin-top: 3.9vh;
+  margin-left:8.5vw;
   border-radius: 10px;
   padding-left: 4vw;
 }
@@ -357,7 +357,7 @@ img{
     font-size:4vw; 
     padding:0.2vw;
     
-    margin-left: 0vw;
+    margin-left: -9.9vw;
     padding-top: 0.6vw;
   }
   
@@ -365,10 +365,10 @@ img{
     width: 4vw;
   }
   #questionimage{
-  height: 50vh;
-  width: 85vw;
-  margin-top: 3vh;
-  margin-left: 3.5vw;
+  height: 43vh;
+  width: 83vw;
+  margin-top: 8vh;
+  margin-left: 5.3vw;
 }
 #pag{  
    margin-left: 8.5vw;
@@ -380,6 +380,9 @@ img{
  }
 #credenzlogo{
   width: 85px;
+}
+.log{
+	margin-left: 1.5vw;
 }
 }
 @media (max-width:420px){
@@ -396,6 +399,15 @@ img{
   margin-left: 1vw;
   display: inline-block;
  }
+ #questionbox{
+  height: 27vh;
+  overflow: auto;
+  padding-top: 1vh;
+  margin-top: 1.5vh;
+  margin-left:8.9vw;
+  border-radius: 10px;
+  padding-left: 4vw;
+}
   
 }
 
@@ -488,6 +500,24 @@ img{
     height:40px;
     width:110px;
   }
+   #questionimage{
+  height: 43vh;
+  width: 82vw;
+  margin-top: 8vh;
+  margin-left: 5.3vw;
+}
+#questionbox{
+  height: 27vh;
+  overflow: auto;
+  padding-top: 1vh;
+  margin-top: 3.9vh;
+  margin-left:8.5vw;
+  border-radius: 10px;
+  padding-left: 4vw;
+}
+.pagination{
+	font-size: 0.77rem;
+}
 }
 @media (max-width:367px){
   #pag{
@@ -810,6 +840,28 @@ img{
     height:28px;
     width:65px;
   }
+    #questionimage{
+  height: 43vh;
+  width: 81.5vw;
+  margin-top: 8vh;
+  margin-left: 4.8vw;
+}
+#questionbox{
+  height: 27vh;
+  overflow: auto;
+  padding-top: 1vh;
+  margin-top: 3.9vh;
+  margin-left:8.5vw;
+  border-radius: 10px;
+  padding-left: 4vw;
+}
+.pagination{
+	font-size: 0.46rem;
+	margin-left: 4.8vw;
+}
+.log{
+	margin-left: 5vw;
+}
 
 }
 
