recent_final_commit

--- a/index.css
+++ b/index.css
@@ -411,7 +411,7 @@ img{
   
 }
 
-@media (max-width: 411px){
+@media (max-width: 412px){
  #pag{
     font-size:15px;
   }
@@ -428,6 +428,29 @@ img{
     width:110px;
     
   }
+  	 #questionimage{
+  height: 37vh;
+  width: 81.5vw;
+  margin-top: 9.8vh;
+  margin-left: 4.8vw;
+}
+#questionbox{
+  height: 24vh;
+  overflow: auto;
+  padding-top: 1vh;
+  margin-top: 4.9vh;
+  margin-left:8.5vw;
+  border-radius: 10px;
+  padding-left: 4vw;
+}
+.pagination{
+	font-size: 0.96rem;
+	margin-left: 0.5vw;
+}
+.log{
+	margin-left: 5vw;
+}
+
 
 }
 @media (max-width: 407px){
@@ -484,6 +507,32 @@ img{
   }
 
 }
+@media (max-width: 385px){
+	 #questionimage{
+  height: 42vh;
+  width: 81.5vw;
+  margin-top: 8.3vh;
+  margin-left: 4.8vw;
+}
+#questionbox{
+  height: 27vh;
+  overflow: auto;
+  padding-top: 1vh;
+  margin-top: 4.1vh;
+  margin-left:8.5vw;
+  border-radius: 10px;
+  padding-left: 4vw;
+}
+.pagination{
+	font-size: 0.79rem;
+	margin-left: 1.1vw;
+}
+.log{
+	margin-left: 5vw;
+}
+
+
+}
 @media (max-width: 376px){
   #pag{
     font-size: 13px;
@@ -516,7 +565,8 @@ img{
   padding-left: 4vw;
 }
 .pagination{
-	font-size: 0.77rem;
+	font-size: 0.76rem;
+	margin-left: 0.6vw;
 }
 }
 @media (max-width:367px){
@@ -538,7 +588,7 @@ img{
   }
   
 }
-@media (max-width:360px){
+@media (max-width:361px){
   #pag{
     font-size:13px ;
     margin-left:5.8vw;
@@ -555,6 +605,29 @@ img{
     height:40px;
     width:110px;
   }
+   #questionimage{
+  height: 42vh;
+  width: 81.5vw;
+  margin-top: 8.3vh;
+  margin-left: 4.8vw;
+}
+#questionbox{
+  height: 27vh;
+  overflow: auto;
+  padding-top: 1vh;
+  margin-top: 4.1vh;
+  margin-left:8.5vw;
+  border-radius: 10px;
+  padding-left: 4vw;
+}
+.pagination{
+	font-size: 0.66rem;
+	margin-left: 3.4vw;
+}
+.log{
+	margin-left: 5vw;
+}
+
   
 }
 @media (max-width:354px){
