--- a/index.css
+++ b/index.css
@@ -31,7 +31,7 @@ html, body {
     padding: 0;
  }
  #navbar{
-background: rgba(0,0,0,0.8);
+background: rgba(0,0,0,0.7);
 font-family: "Segoe UI",Roboto,Arial,sans-serif;
 }
 #credenzlogo{
@@ -240,7 +240,7 @@ a.questionnumber{
 footer{
 background-color:  rgba(0,0,0,0.7)!important;
 color: white;
-font-size: 1.25rem;
+font-size: 18px;
 
 }
 a.abs{
@@ -301,12 +301,23 @@ img{
 }
 footer{
   margin-top: 60vh;
-  font-size: 0rem;
-  background-color:  rgba(0,0,0,0.7)!important;
+  
+  background-color:  rgba(0,0,0,1)!important;
 }
 .ft{
-	padding-bottom: 0.5vh;
-	padding-top: 0.5vh;
+	
+	margin-top: 1vh;
+	font-size: 12px;
+	padding-bottom: 0vw;
+	
+}
+a.abs{
+    text-decoration: none;
+    color:white;
+    font-size:12px;
+    padding-top: 0vw;
+    
+    
 }
 
 #ft1{
@@ -391,6 +402,7 @@ img{
 #pag{  
    margin-left: 8.5vw;
    margin-top: 3vh;
+   font-size: 16.9px;
  }
  .qno{
   background-color: #001122;
@@ -555,6 +567,21 @@ img{
   #pag{
     font-size: 13px;
   }
+  .ft{
+	
+	margin-top: 1vh;
+	font-size: 11.5px;
+	padding-bottom: 0vw;
+	
+}
+a.abs{
+    text-decoration: none;
+    color:white;
+    font-size:11.5px;
+    padding-right: 0vw;
+    
+    
+}
   #ft1{
     font-size: 0.85rem;
   }
@@ -606,7 +633,7 @@ img{
   }
   
 }
-@media (max-width:361px){
+@media (max-width:362px){
   #pag{
     font-size:13px ;
     margin-left:5.8vw;
@@ -617,6 +644,21 @@ img{
   #ft2{
     font-size: 13.1px;
   }
+  .ft{
+	
+	margin-top: 1vh;
+	font-size: 11.3px;
+	padding-bottom: 0vw;
+	
+}
+a.abs{
+    text-decoration: none;
+    color:white;
+    font-size:11.3px;
+    padding-right: 0vw;
+    
+    
+}
   .log{
     position: relative;
     left:32%;
@@ -653,6 +695,21 @@ img{
     font-size:13px ;
     margin-left:5.4vw;
   }
+  .ft{
+	
+	margin-top: 1vh;
+	font-size: 11.1px;
+	padding-bottom: 0vw;
+	
+}
+a.abs{
+    text-decoration: none;
+    color:white;
+    font-size:11.1px;
+    padding-right: 0vw;
+    
+    
+}
   #ft1{
     font-size: 13px;
   }
@@ -672,6 +729,21 @@ img{
     font-size:13px ;
     margin-left:4.9vw;
   }
+  .ft{
+	
+	margin-top: 1vh;
+	font-size: 10.5px;
+	padding-bottom: 0vw;
+	
+}
+a.abs{
+    text-decoration: none;
+    color:white;
+    font-size:10.5px;
+    padding-right: 0vw;
+    
+    
+}
   #ft1{
     font-size: 12.8px;
   }
@@ -767,6 +839,21 @@ img{
     font-size:12px ;
     margin-left:3.2vw;
   }
+  .ft{
+	
+	margin-top: 1vh;
+	font-size: 9.5px;
+	padding-bottom: 0vw;
+	
+}
+a.abs{
+    text-decoration: none;
+    color:white;
+    font-size:9.5px;
+    padding-right: 0vw;
+    
+    
+}
   #ft1{
     font-size: 11.8px;
   }
