final_recent_commit

--- a/index.css
+++ b/index.css
@@ -158,6 +158,7 @@ font-family: "Segoe UI",Roboto,Arial,sans-serif;
   border-radius: 10px;
   cursor: pointer;
   background-color:#001122;
+  padding-left: 15.5vw;
 }
 #op1:focus{
   background-color: #00AACC;
@@ -171,6 +172,7 @@ font-family: "Segoe UI",Roboto,Arial,sans-serif;
   border-radius: 10px;
   cursor: pointer; 
   background-color:#001122;
+  padding-left: 15.5vw;
 }
 #op2:focus{
   background-color: #00AACC;
@@ -184,6 +186,7 @@ font-family: "Segoe UI",Roboto,Arial,sans-serif;
   border-radius: 10px;
   cursor: pointer;
   background-color:#001122;
+  padding-left: 15.5vw;
 }
 #op3:focus{
   background-color: #00AACC;
@@ -197,6 +200,7 @@ font-family: "Segoe UI",Roboto,Arial,sans-serif;
   border-radius: 10px;
   cursor: pointer;
   background-color:#001122;
+  padding-left: 15.5vw;
 }
 #op4:focus{
   background-color: #00AACC;
@@ -342,6 +346,7 @@ a.abs{
   margin-top: 2vh;
   padding-top: 2.1vh;
   border-radius: 10px;
+  padding-left: 19.7vw;
 }
 #op2{
   height: 9.5vh;
@@ -349,6 +354,7 @@ a.abs{
   margin-top: 2.5vh;
   padding-top: 2.1vh;
   border-radius: 10px;
+  padding-left: 19.7vw;
   
 }
 #op3{
@@ -357,6 +363,7 @@ a.abs{
   margin-top: 2.5vh;
   padding-top: 2.1vh;
   border-radius: 10px;
+  padding-left: 19.7vw;
 }
 #op4{
   height: 9.5vh;
@@ -364,6 +371,7 @@ a.abs{
   margin-top: 2.5vh;
   padding-top: 2.1vh;
   border-radius: 10px;
+  padding-left: 19.7vw;
 }
 #questionbox{
   height: 27vh;
@@ -444,18 +452,22 @@ a.abs{
    #op1{
    	padding-top: 2.5vh;
    	font-size: 1.2rem;
+   	padding-left: 19vw;
   }
    #op2{
    	padding-top: 2.5vh;
    	font-size: 1.2rem;
+   	padding-left: 19vw;
   }
    #op3{
    	padding-top: 2.5vh;
    	font-size: 1.2rem;
+   	padding-left: 19vw;
   }
    #op4{
    	padding-top: 2.5vh;
    	font-size: 1.2rem;
+   	padding-left: 19vw;
   }
 
   .log{
@@ -554,18 +566,22 @@ a.abs{
 #op1{
    	padding-top: 2.4vh;
    	font-size: 1.2rem;
+   	padding-left: 16.5vw;
   }
    #op2{
    	padding-top: 2.4vh;
    	font-size: 1.2rem;
+   	padding-left: 16.5vw;
   }
    #op3{
    	padding-top: 2.4vh;
    	font-size: 1.2rem;
+   	padding-left: 16.5vw;
   }
    #op4{
    	padding-top: 2.4vh;
    	font-size: 1.2rem;
+   	padding-left: 16.5vw;
   }
 #questionbox{
   height: 27vh;
@@ -589,6 +605,27 @@ a.abs{
 @media (max-width: 376px){
   #pag{
     font-size: 13px;
+  }
+   #op1{
+   	padding-top: 2.1vh;
+   	font-size: 1.2rem;
+   	padding-left: 15vw;
+
+  }
+   #op2{
+   	padding-top: 2.1vh;
+   	font-size: 1.2rem;
+   	padding-left: 15vw;
+  }
+   #op3{
+   	padding-top: 2.1vh;
+   	font-size: 1.2rem;
+   	padding-left: 15vw;
+  }
+   #op4{
+   	padding-top: 2.1vh;
+   	font-size: 1.2rem;
+   	padding-left: 15vw;
   }
   .ft{
 	
@@ -878,6 +915,26 @@ a.abs{
   #pag{
     font-size:12px ;
     margin-left:3.2vw;
+  }
+   #op1{
+   	padding-top: 1.9vh;
+   	font-size: 1.2rem;
+   	padding-left: 12vw;
+  }
+   #op2{
+   	padding-top: 1.9vh;
+   	font-size: 1.2rem;
+   	padding-left: 12vw;
+  }
+   #op3{
+   	padding-top: 1.9vh;
+   	font-size: 1.2rem;
+   	padding-left: 12vw;
+  }
+   #op4{
+   	padding-top: 1.9vh;
+   	font-size: 1.2rem;
+   	padding-left: 12vw;
   }
   .ft{
 	
