--- a/wt.css
+++ b/wt.css
@@ -58,7 +58,7 @@ body{
     box-shadow: 0 10px 20px black;
     background-size: cover;
     font-family: 'Abel', sans-serif;
-    background-image: url("ak.jpeg");
+    background-image: url("fk.jpeg");
     border-radius:5px;
     cursor:pointer;
     margin-left:2vw;
@@ -69,7 +69,7 @@ body{
     box-shadow: 0 10px 20px black;
     background-size: cover;
     font-family: 'Abel', sans-serif;
-    background-image: url("aks.jpeg");
+    background-image: url("od.jpeg");
     border-radius:5px;
     cursor: pointer;
     margin-left:3vw;
@@ -80,7 +80,7 @@ body{
     box-shadow: 0 10px 20px black;
     background-size: cover;
     font-family: 'Abel', sans-serif;
-    background-image: url("jr.jpeg");
+    background-image: url("sp.jpeg");
     border-radius:5px;
     cursor: pointer;
     margin-left:3vw;
@@ -91,7 +91,7 @@ body{
     box-shadow: 0 10px 20px black;
     background-size: cover;
     font-family: 'Abel', sans-serif;
-    background-image: url("mk.jpeg");
+    background-image: url("sd1.jpeg");
     border-radius:5px;
     cursor: pointer;
     margin-left:4vw;
@@ -103,7 +103,7 @@ body{
     box-shadow: 0 10px 20px black;
     background-size: cover;
     font-family: 'Abel', sans-serif;
-    background-image: url("ac.jpeg");
+    background-image: url("ab3.jpeg");
     border-radius:5px;
     cursor:pointer;
     margin-left:27vw;
@@ -114,10 +114,18 @@ body{
     box-shadow: 0 10px 20px black;
     background-size: cover;
     font-family: 'Abel', sans-serif;
-    background-image: url("aj.jpeg");
+    background-image: url("rv1.jpeg");
     border-radius:5px;
     cursor: pointer;
     margin-left:3vw;
+}
+.st{
+    position: relative;
+    margin-top:2.5vw;
+    color:white;
+    font-size:25px;
+    font-weight:bold;
+    text-align: center;
 }
 .main1:hover{
     transform: scale(1.05);
@@ -136,19 +144,6 @@ body{
 }
 .main6:hover{
     transform: scale(1.05);
-}
-.st{
-    position: relative;
-    margin-top:2.5vw;
-    color:white;
-    font-size:25px;
-    font-weight:bold;
-    text-align: center;
-}
-a.ps{
-    color:white;
-    text-decoration: none;
-    font-size:20px;
 }
 /*.gradient {
     height: 20vw;
@@ -235,41 +230,41 @@ footer {
         height:72vw;
         width:64vw;
         margin-top:10vw;
-        margin-left:14vw;
+        margin-left:13.5vw;
         overflow: hidden;
     }
     .main2{
         height:72vw;
         width:64vw;
         margin-top:10vw;
-        margin-left:14vw;
+        margin-left:13.5vw;
         overflow: hidden;
     }
     .main3{
         height:72vw;
         width:64vw;
         margin-top:10vw;
-        margin-left:14vw;
+        margin-left:13.5vw;
         overflow: hidden;
     }
     .main4{
         height:72vw;
         width:64vw;
         margin-top:10vw;
-        margin-left:14vw;
+        margin-left:13.5vw;
     }
     .main5{
         height:72vw;
         width:64vw;
         margin-top:8vw;
-        margin-left:14vw;
+        margin-left:13.5vw;
         overflow: hidden;
     }
     .main6{
         height:72vw;
         width:64vw;
         margin-top:10vw;
-        margin-left:14vw;
+        margin-left:13.5vw;
         overflow: hidden;
     }
     .st{
@@ -290,7 +285,6 @@ footer {
     .ft{
         font-size:15px;
         overflow: hidden;
-        
     }
     .content{
         height:20vw;
@@ -302,23 +296,17 @@ footer {
     h2{
         padding-top:8vw;
     }
-    a.ps{
-        font-size:15px;
+}
+@media(max-width:400px){
+    #adjust{
+        padding:8% !important;
+    }
+    .ft{
+        font-size:14px;
     }
 }
-@media(max-width:392px){
+@media(max-width:370px){
     #adjust{
         padding:12% !important;
-    }
-}
-@media(max-width:360px){
-    .icons i{
-        font-size:25px;
-    }
-    .icons{
-        bottom:18.5vw;
-    }
-    h2{
-        padding-top:7vw;
     }
 }
