--- a/rules.css
+++ b/rules.css
@@ -1,4 +1,15 @@
-
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+ body{
+      margin:0;
+    padding:0;
+    background: linear-gradient(to right bottom, #002244, rgb(88, 173, 243));
+    
+      font-family: sans-serif;
+    
+ }
 .box {
     
     margin-left: 12.3vw;
@@ -13,10 +24,23 @@
     width: 70vw;
     border-radius: 15px;
 }
-img{
+#navbar{
+background: rgba(0,0,0,0.7);
+
+}
+#pisblogo{
+    margin-left: 37.2vw;
     height: 40px;
     width: 115px;
 }
+#cretronixlogo{
+     height: 40px;
+    width: 65px;
+    margin-left: -0.8vw;
+
+
+}
+
 .bar a{
     font: 22px ROBOTO;
     margin-left: 29.8vw;
@@ -24,8 +48,9 @@ img{
 }
 
 .box .card-body{
-    overflow: auto;
+    overflow: auto;   
 }
+
 
 
 .mt-6 {
@@ -33,11 +58,20 @@ img{
 }
 
 body {
- background: #00AACC;
+ background: linear-gradient(to right bottom, #002244, rgb(88, 173, 243));
 }
+body::before{
+   content:"";
+   position: absolute;
+   left:0;
+   top:0;
+   width:100vw;
+   height:100vh;
+   backdrop-filter:blur(100px);
+ }
 
 footer{
-background-color:  rgba(0,0,0,0.8);
+background-color:  rgba(0,0,0,0.7);
 font-family: "Segoe UI",Roboto,Arial,sans-serif;
 font-size: 18px;
 
@@ -52,12 +86,12 @@ font-size: 18px;
 
 #btn {
     font-family: sans-serif;
-    font-size: 20px;
+    font-size: 22px;
     border: 1px solid grey;
     background: linear-gradient(-180deg,#00AACC,#001122);
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.8);
     margin-top: 2.3vh;
-    border-radius: 10px;
+    border-radius: 3px;
     color: white;
     outline-style: none;
     width: 12vw;
@@ -72,54 +106,71 @@ a.abt{
     text-decoration: none;
 }
 @media (max-width: 426px){
-    img{
-        height: 35px;
-        width: 100px; 
-    }
+    
     .bar a{
     font: 20px ROBOTO;
-    margin-left: 5vw;
+    margin-left: 0.5vw;
     
 }
+#pisblogo{
+    margin-left: 1vw;
+    height: 30px;
+    width: 90px;
+}
+#cretronixlogo{
+     height: 35px;
+    width: 55px;
+    margin-left: -0.8vw;
+
 
 }
-@media (max-width: 768px) {
-    .bar {
-        font: 25px sans-serif;
-        margin-left: 0;
-    }
-
-    .box {
-        margin-left: 4vw;
-        padding: 0px;
-        width: 90%;
-    }
-    .btn {
-        border: 0px;
-        width: 90%;
-        margin-left: 4vw;
-        padding: 0px;
-        position: absolute;
-        z-index: 1000;
-        font-family: sans-serif;
-        font-size: 20px;
-        border: 1px solid white;
-        border-radius: 5px;
-        background: #002244;
-        box-shadow: 0px 15px 30px 4px rgba(0, 0, 0, 0.8);
-    }
-
-    footer {
-        margin-top: 23vw;
-    }
-
-   
+.box {
+    margin-left: 6.4vw;
+    padding: 0;
+    margin-top: 3.5vh;
+    background:#002244;
+    height: 72.2vh;
+    border: 0px;
+    font-family: sans-serif;
+    background-color:  rgba(0,0,0,0.8);
+    box-shadow: 0px 5px 6px rgba(0, 0, 0, 0.8);
+    width: 80vw;
+    border-radius: 15px;
+}
+.bar {
+    font: 1rem sans-serif;
+    margin-left: 14.9vw;
+}
+.box .card-body{
+    font-size: 16px;
+}
+h3{
+    font-size: 19px;
 }
 
+ #btn {
+    font-family: sans-serif;
+    font-size: 15px;
+    border: 1px solid black ;
+    background: linear-gradient(-180deg,#00AACC,#001122);
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.8);
+    margin-top: 2.5vh;
+    border-radius: 3px;
+    color: white;
+    outline-style: none;
+    width: 25vw;
+    height: 6vh;
+    padding-top: 0px;
+    
+}
+footer{
+    margin-top: 3vh;
+}
+.ftt{
+    font-size:12px;
+}
 
-
-
-
+}
 @media (max-width: 321px){
 .box {
     
@@ -136,7 +187,7 @@ a.abt{
 }
  .bar a{
     font: 15px ROBOTO;
-    margin-left: 0.5vw;
+    margin-left: 0.3vw;
     
 }
 
@@ -146,42 +197,76 @@ a.abt{
 h3{
     font-size: 20px;
 }
-img{
-  width: 80px;
-    height: 30px; 
+
+
+ #pisblogo{
     
- }
+    height: 30px;
+    width: 80px;
+    
+}
+#cretronixlogo{
+     height: 35px;
+    width: 5px;
+    margin-left: -0.8vw;
+
+
+}
  #btn {
     font-family: sans-serif;
-    font-size: 15px;
-    border: 1px solid grey;
+    font-size: 13px;
+    border: 1px solid black;
     background: linear-gradient(-180deg,#00AACC,#001122);
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.8);
     margin-top: 2.6vh;
-    border-radius: 10px;
+    border-radius: 3px;
     color: white;
     outline-style: none;
-    width: 27vw;
+    width: 42vw;
     height: 6.1vh;
+}
+
+
+}
+@media (max-width: 361px){
+   .bar a{
+    font: 15px ROBOTO;
+    margin-left: 0.3vw;  
+}
+ #pisblogo{
+    
+    height: 30px;
+    width: 80px;
+}
+#cretronixlogo{
+     height: 35px;
+    width: 55px;
+    margin-left: -0.8vw;
+}
+.box{
+    margin-top: 5vh;
+}
+footer{
+    margin-top: 5vh;
 }
 }
 @media (max-width: 376px){
 .box {
     
     padding: 0;
-    margin-top: 3vh;
+    margin-top: 5vh;
     background:#002244;
     height: 69vh;
     border: 0px;
     font-family: sans-serif;
     background-color:  rgba(0,0,0,0.8);
     box-shadow: 0px 5px 6px rgba(0, 0, 0, 0.8);
-    width: 70vw;
+    width: 78vw;
     border-radius: 15px;
 }
 .bar a{
     font: 20px ROBOTO;
-    margin-left: 1.2vw;
+    margin-left:0.2vw;
     
 }
 .box .card-body{
@@ -190,79 +275,37 @@ img{
 h3{
     font-size: 20px;
 }
-img{
-  width: 80px;
-    height: 30px; 
-    
- }
+
+ #pisblogo{
+    margin-left: 1.9vw;
+    height: 30px;
+    width: 80px;
+}
+#cretronixlogo{
+     height: 35px;
+    width: 55px;
+    margin-left: -0.8vw;
+
+
+}
  #btn {
     font-family: sans-serif;
-    font-size: 19px;
-    border: 1px solid grey;
+    font-size: 15px;
+    border: 1px solid black;
     background: linear-gradient(-180deg,#00AACC,#001122);
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.8);
-    margin-top: 2.6vh;
-    border-radius: 10px;
+    margin-top: 3vh;
+    border-radius: 3px;
     color: white;
     outline-style: none;
-    width: 24vw;
+    width: 29vw;
     height: 6.1vh;
 }
 .card-footer{
     font-size: 12px;
  }
 }
-@media (max-width: 426px){
-.box {
-    margin-left: 6.4vw;
-    padding: 0;
-    margin-top: 3.5vh;
-    background:#002244;
-    height: 72.2vh;
-    border: 0px;
-    font-family: sans-serif;
-    background-color:  rgba(0,0,0,0.8);
-    box-shadow: 0px 5px 6px rgba(0, 0, 0, 0.8);
-    width: 80vw;
-    border-radius: 15px;
-}
-.bar {
-    font: 1rem sans-serif;
-    margin-left: 10vw;
-}
-.box .card-body{
-    font-size: 18px;
-}
-h3{
-    font-size: 20px;
-}
-img{
-  width: 80px;
-    height: 30px; 
-    
- }
- #btn {
-    font-family: sans-serif;
-    font-size: 15px;
-    border: 1px solid black ;
-    background: linear-gradient(-180deg,#00AACC,#001122);
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.8);
-    margin-top: 2.5vh;
-    border-radius: 10px;
-    color: white;
-    outline-style: none;
-    width: 25vw;
-    height: 6vh;
-    padding-top: 0px;
-    
-}
-footer{
-    margin-top: 3vh;
-}
-.ftt{
-    font-size:12px;
-}
-}
+
 @media (max-width: 768px){
 .fixed-bottom { 
 position: relative; 
@@ -284,19 +327,38 @@ position: relative;
     width: 80vw;
     border-radius: 15px;
 }
+#btn{
+    border: 1px solid black;
+    width: 18vw;
+
+}
 .bar a{
     font: 22px ROBOTO;
-    margin-left: 24.5vw;
+    margin-left: 34.2vw;
     
 }
 .box .card-body{
     font-size: 14px;
 }
+
 h3{
     font-size: 20px;
 }
 footer{
     margin-top: 1vh;
+}
+#pisblogo{
+    
+    height: 35px;
+    width: 100px;
+    margin-left: 28vw;
+}
+#cretronixlogo{
+     height: 40px;
+    width: 65px;
+    margin-left: -0.8vw;
+
+
 }
 }
 @media (min-width: 1024px){
@@ -305,7 +367,7 @@ footer{
     padding: 0;
     margin-top: 5vh;
     background:#002244;
-    height: 71vh;
+    height: 68vh;
     border: 0px;
     font-family: sans-serif;
     background-color:  rgba(0,0,0,0.8);
@@ -319,21 +381,24 @@ footer{
 }
 .bar a{
     font: 22px ROBOTO;
-    margin-left: 30.85vw;
+    margin-left: 37.8vw;
     
 }
 #btn {
     font-family: sans-serif;
     font-size: 20px;
-    border: 1px solid grey;
+    border: 1px solid black;
     background: linear-gradient(-180deg,#00AACC,#001122);
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.8);
-    margin-top: 2.6vh;
-    border-radius: 10px;
+    margin-top: 3.4vh;
+    border-radius: 3px;
     color: white;
     outline-style: none;
-    width: 12vw;
+    width: 13vw;
     height: 6vh;
+}
+#pisblogo{
+    margin-left: 34vw;
 }
 }
 @media (min-width: 1200px){
@@ -343,7 +408,7 @@ footer{
     padding: 0;
     margin-top: 3vh;
     background:#002244;
-    height: 72vh;
+    height: 69vh;
     border: 0px;
     font-family: sans-serif;
     background-color:  rgba(0,0,0,0.8);
@@ -357,7 +422,7 @@ footer{
 .bar a{
     font: 22px ROBOTO;
     
-    margin-left: 34.4vw;
+    margin-left: 39.4vw;
 }
 #btn {
     font-family: sans-serif;
@@ -365,13 +430,70 @@ footer{
     border: 1px solid black;
     background: linear-gradient(-180deg,#00AACC,#001122);
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.8);
-    margin-top: 2.1vh;
-    border-radius: 10px;
+    margin-top: 2.5vh;
+    border-radius: 3px;
     color: white;
     outline-style: none;
-    width: 10.3vw;
+    width: 9vw;
     height: 6vh;
 }
+#pisblogo{
+    margin-left: 37.1vw;
+    height: 40px;
+    width: 115px;
+}
+
+}
+@media (min-width: 1300px){
+    .box {
+    
+    margin-left: 14.1vw;
+    padding: 0;
+    margin-top: 5vh;
+    background:#002244;
+    height: 69vh;
+    border: 0px;
+    font-family: sans-serif;
+    background-color:  rgba(0,0,0,0.8);
+    box-shadow: 0px 5px 6px rgba(0, 0, 0, 0.8);
+    width: 70vw;
+    border-radius: 3px;
+}
+.box .card-body{
+    font-size: 18px;
+}
+.bar a{
+    font: 22px ROBOTO;
+    
+    margin-left: 41.2vw;
+}
+
+#btn {
+    font-family: sans-serif;
+    font-size: 20px;
+    border: 1px solid black;
+    background: linear-gradient(-180deg,#00AACC,#001122);
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.8);
+    margin-top: 2.7vh;
+    border-radius: 3px;
+    color: white;
+    outline-style: none;
+    width: 9.6vw;
+    height: 6vh;
+}
+h3{
+    font-size: 29px
+}
+
+#pisblogo{
+    margin-left: 36.1vw;
+    height: 40px;
+    width: 115px;
+}
+ .card-footer{
+    font-size: 25px;
+ }
+
 
 }
 @media (min-width: 1400px){
@@ -381,7 +503,7 @@ footer{
     padding: 0;
     margin-top: 5vh;
     background:#002244;
-    height: 72vh;
+    height: 70vh;
     border: 0px;
     font-family: sans-serif;
     background-color:  rgba(0,0,0,0.8);
@@ -390,40 +512,53 @@ footer{
     border-radius: 15px;
 }
 .box .card-body{
-    font-size: 23px;
+    font-size: 22px;
 }
 .bar a{
     font: 22px ROBOTO;
     
-    margin-left: 30.6vw;
+    margin-left: 42.2vw;
 }
 
 #btn {
     font-family: sans-serif;
     font-size: 20px;
-    border: 1px solid grey;
+    border: 1px solid black;
     background: linear-gradient(-180deg,#00AACC,#001122);
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.8);
-    margin-top: 2.4vh;
-    border-radius: 10px;
+    margin-top: 2.8vh;
+    border-radius: 3px;
     color: white;
     outline-style: none;
-    width: 11.1vw;
+    width: 9.7vw;
     height: 6vh;
 }
 h3{
     font-size: 29px
 }
 
-img{
-  width: 110px;
-    height: 40px; 
-    
- }
+#pisblogo{
+    margin-left: 37.1vw;
+    height: 40px;
+    width: 115px;
+}
  .card-footer{
     font-size: 25px;
  }
 
+
+}
+@media (min-width: 1500px){
+.bar a{
+    font: 22px ROBOTO;
+    
+    margin-left: 42.2vw;
+}
+#pisblogo{
+    margin-left: 37.8vw;
+    height: 40px;
+    width: 115px;
+}
 
 }
 @media (min-width: 1700px){
@@ -447,31 +582,32 @@ img{
 .bar a{
    font: 22px ROBOTO;
     
-    margin-left: 32.4vw;
+    margin-left: 43.3vw;
 }
 
 #btn {
     font-family: sans-serif;
     font-size: 26px;
-    border: 1px solid grey;
+    border: 1px solid black;
     background: linear-gradient(-180deg,#00AACC,#001122);
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.8);
     margin-top: 2.4vh;
-    border-radius: 10px;
+    border-radius: 3px;
     color: white;
     outline-style: none;
     width: 11.1vw;
     height: 6vh;
 }
+#pisblogo{
+    margin-left: 39.1vw;
+    height: 40px;
+    width: 115px;
+}
 h3{
     font-size: 36px
 }
 
-img{
-  width: 120px;
-    height: 47px; 
-    
- }
+
  .card-footer{
     font-size: 25px;
  }
@@ -499,17 +635,17 @@ img{
 .bar a{
     font: 22px ROBOTO;
     
-    margin-left: 32.85vw;
+    margin-left: 44.2vw;
 }
 
 #btn {
     font-family: sans-serif;
     font-size: 27px;
-    border: 1px solid grey;
+    border: 1px solid black;
     background: linear-gradient(-180deg,#00AACC,#001122);
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.8);
     margin-top: 2.5vh;
-    border-radius: 10px;
+    border-radius: 3px;
     color: white;
     outline-style: none;
     width: 11.1vw;
@@ -519,11 +655,11 @@ h3{
     font-size: 38px
 }
 
-img{
-  width: 120px;
-    height: 47px; 
-    
- }
+#pisblogo{
+    margin-left: 39.1vw;
+    height: 40px;
+    width: 115px;
+}
  .card-footer{
     font-size: 25px;
  }
@@ -550,31 +686,32 @@ img{
 }
 .bar a{
     font: 22px ROBOTO;
-    margin-left: 32.9vw;
+    margin-left: 45.5vw;
 }
 
 #btn {
     font-family: sans-serif;
     font-size: 29px;
-    border: 1px solid grey;
+    border: 1px solid black;
     background: linear-gradient(-180deg,#00AACC,#001122);
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.8);
     margin-top: 2.4vh;
-    border-radius: 10px;
+    border-radius: 3px;
     color: white;
     outline-style: none;
     width: 11.1vw;
     height: 6vh;
 }
+#pisblogo{
+    margin-left: 39.1vw;
+    height: 40px;
+    width: 115px;
+}
 h3{
     font-size: 42px
 }
 
-img{
-  width: 130px;
-    height: 52px; 
-    
- }
+
  .card-footer{
     font-size: 29px;
  }
