--- a/index.css
+++ b/index.css
@@ -41,6 +41,64 @@ font-family: "Segoe UI",Roboto,Arial,sans-serif;
   padding:0vw;
 
  }
+ #btn1{
+display: inline-block;
+margin-left: 1.3vw;
+ }
+ #btn2{
+display: inline-block;
+margin-left: 2.5vw;
+ }
+ #btn3{
+display: inline-block;
+margin-left: 2.5vw;
+ }
+
+ #optionbox{
+  margin-top: 6vh;
+ }
+ .switch-field {
+  display: flex;
+  overflow-y:auto;
+}
+.switch-field input {
+  position: absolute !important;
+  clip: rect(0, 0, 0, 0);
+  height: 1px;
+  width: 1px;
+  border: 0;
+  overflow-y:auto;
+
+}
+label{
+  margin:5px;
+}
+.switch-field label {
+  background-color:#001122 ;
+  color: white;
+  font-size: 18px;
+  font-family:sans-serif;
+  width:70vh;
+  height:8vh;
+  line-height: 1.7;
+  text-align: center;
+  overflow-y:auto;
+  padding: 9px; 
+  justify-content:center;
+  align-items:center;
+  border:none;
+  border-radius:4px;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
+  transition: all 0.1s ease-in-out;
+}
+.switch-field label:hover {
+  cursor: pointer;
+  background-color: #2e343f;
+}
+.switch-field input:checked + label {
+  background-color: #00AACC;
+  box-shadow: none;
+}
  #cretronixlogo{
   
   height: 40px;
@@ -129,9 +187,9 @@ font-family: "Segoe UI",Roboto,Arial,sans-serif;
  
 }
 #questionbox{
-  height: 12vh;
+  height: 13vh;
   overflow: auto;
-  padding-top: 1vh;
+  padding-top: 1.3vh;
   margin-top: 4.2vh;
   width: 2vw;
   margin-left: 3vw;
@@ -317,9 +375,59 @@ img{
   padding:0vw;
 
  }
+ #opt{
+  margin-left: 8vw;
+ }
+ #optionbox{
+  margin-top: 0.5vh;
+ }
 #q1{
   margin-left: 18vw;
-
+}
+#btn1{
+display: none;
+height: 0vh;
+width: 0vw;
+}
+#btn2{
+display: none;
+height: 0vh;
+width: 0vw;
+}
+#btn3{
+display: none;
+height: 0vh;
+width: 0vw;
+}
+#btn1mob{
+ display: inline-block;
+ margin-left: 4vw;
+}
+#btn2mob{
+ display: inline-block;
+ margin-left: 5vw;
+}
+.switch-field label {
+  
+  color: white;
+  font-size: 18px;
+  font-family:sans-serif;
+  width:70vh;
+  height:8vh;
+  line-height: 1.7;
+  text-align: center;
+  overflow-y:auto;
+  padding: 6px; 
+  justify-content:center;
+  align-items:center;
+  border:none;
+  border-radius:4px;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
+  transition: all 0.1s ease-in-out;
+}
+#btn3mob{
+ margin-left: -22vw;
+ margin-top: -1vh;
 }
 footer{
   margin-top: 60vh;
@@ -1687,6 +1795,378 @@ position: relative;
 
 
 }
+@media (min-width:1023px){
+    #btn1mob{
+display: none;
+height: 0vh;
+width: 0vw;
+
+ }
+ #btn2mob{
+
+display: none;
+height: 0vh;
+width: 0vw;
+
+ }
+ #btn3mob{
+display: none;
+height: 0vh;
+width: 0vw;
+
+ }
+ 
+
+}
+@media (min-width:767px) and (max-width:1000px){
+#btn1{
+display: none;
+height: 0vh;
+width: 0vw;
+}
+#btn2{
+display: none;
+height: 0vh;
+width: 0vw;
+}
+#btn3{
+display: none;
+height: 0vh;
+width: 0vw;
+}
+#btn1mob{
+ display: inline-block;
+ margin-left: 7.5vw;
+ margin-top: -2vh;
+}
+#btn2mob{
+ display: inline-block;
+ margin-left: 2vw;
+ margin-top: -2vh;
+}
+#btn3mob{
+ margin-left: 0vw;
+ margin-top: -1.5vh;
+}
+#optionbox{
+  margin-top:2vh ;
+}
+
+
+}
+@media (min-width:1000px) and (max-width:1023px){
+#btn1{
+display: none;
+height: 0vh;
+width: 0vw;
+}
+#btn2{
+display: none;
+height: 0vh;
+width: 0vw;
+}
+#btn3{
+display: none;
+height: 0vh;
+width: 0vw;
+}
+#btn1mob{
+ display: inline-block;
+ margin-left: 14.5vw;
+ margin-top: -2vh;
+}
+#btn2mob{
+ display: inline-block;
+ margin-left: 2vw;
+ margin-top: -2vh;
+}
+#btn3mob{
+ margin-left: 0vw;
+ margin-top: -1.5vh;
+}
+#optionbox{
+  margin-top:2vh ;
+}
+
+}
+@media (min-width:1023px){
+   #btn1{
+display: inline-block;
+margin-left: 3.2vw;
+ }
+ #btn2{
+display: inline-block;
+margin-left: 1vw;
+ }
+ #btn3{
+display: inline-block;
+margin-left: 1vw;
+ }
+
+}
+
+@media (min-width:1100px){
+   #btn1{
+display: inline-block;
+margin-left: 3.5vw;
+ }
+ #btn2{
+display: inline-block;
+margin-left: 1vw;
+ }
+ #btn3{
+display: inline-block;
+margin-left: 1vw;
+ }
+
+}
+@media (min-width:1200px){
+   #btn1{
+display: inline-block;
+margin-left: 6.3vw;
+ }
+ #btn2{
+display: inline-block;
+margin-left: 1.5vw;
+ }
+ #btn3{
+display: inline-block;
+margin-left: 1.5vw;
+ }
+
+}
+@media (min-width:1300px){
+   #btn1{
+display: inline-block;
+margin-left: 6.2vw;
+ }
+ #btn2{
+display: inline-block;
+margin-left: 1.5vw;
+ }
+ #btn3{
+display: inline-block;
+margin-left: 1.5vw;
+ }
+ .switch-field label {
+  
+  color: white;
+  font-size: 19px;
+  font-family:sans-serif;
+  width:70vh;
+  height:8vh;
+  line-height: 1.7;
+  text-align: center;
+  overflow-y:auto;
+  padding: 13px; 
+  justify-content:center;
+  align-items:center;
+  border:none;
+  border-radius:4px;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
+  transition: all 0.1s ease-in-out;
+}
+
+}
+@media (min-width:1500px){
+   #btn1{
+display: inline-block;
+margin-left: 6.4vw;
+ }
+ #btn2{
+display: inline-block;
+margin-left: 1.5vw;
+ }
+ #btn3{
+display: inline-block;
+margin-left: 1.5vw;
+ }
+ .switch-field label {
+  
+  color: white;
+  font-size: 20px;
+  font-family:sans-serif;
+  width:70vh;
+  height:8vh;
+  line-height: 1.7;
+  text-align: center;
+  overflow-y:auto;
+  padding: 14px; 
+  justify-content:center;
+  align-items:center;
+  border:none;
+  border-radius:4px;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
+  transition: all 0.1s ease-in-out;
+}
+
+}
+@media (min-width:1600px){
+   #btn1{
+display: inline-block;
+margin-left: 6.4vw;
+ }
+ #btn2{
+display: inline-block;
+margin-left: 1.5vw;
+ }
+ #btn3{
+display: inline-block;
+margin-left: 1.5vw;
+ }
+ .switch-field label {
+  
+  color: white;
+  font-size: 22px;
+  font-family:sans-serif;
+  width:70vh;
+  height:8vh;
+  line-height: 1.7;
+  text-align: center;
+  overflow-y:auto;
+  padding: 14px; 
+  justify-content:center;
+  align-items:center;
+  border:none;
+  border-radius:4px;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
+  transition: all 0.1s ease-in-out;
+}
+
+}
+@media (min-width:1700px){
+   #btn1{
+display: inline-block;
+margin-left: 6.4vw;
+ }
+ #btn2{
+display: inline-block;
+margin-left: 1.5vw;
+ }
+ #btn3{
+display: inline-block;
+margin-left: 1.5vw;
+ }
+ .switch-field label {
+  
+  color: white;
+  font-size: 24px;
+  font-family:sans-serif;
+  width:70vh;
+  height:8vh;
+  line-height: 1.7;
+  text-align: center;
+  overflow-y:auto;
+  padding: 15px; 
+  justify-content:center;
+  align-items:center;
+  border:none;
+  border-radius:4px;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
+  transition: all 0.1s ease-in-out;
+}
+
+}
+@media (min-width:1800px){
+   #btn1{
+display: inline-block;
+margin-left: 6.4vw;
+ }
+ #btn2{
+display: inline-block;
+margin-left: 1.5vw;
+ }
+ #btn3{
+display: inline-block;
+margin-left: 1.5vw;
+ }
+ .switch-field label {
+  
+  color: white;
+  font-size: 26px;
+  font-family:sans-serif;
+  width:70vh;
+  height:8vh;
+  line-height: 1.7;
+  text-align: center;
+  overflow-y:auto;
+  padding: 15px; 
+  justify-content:center;
+  align-items:center;
+  border:none;
+  border-radius:4px;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
+  transition: all 0.1s ease-in-out;
+}
+
+}
+@media (min-width:1900px){
+   #btn1{
+display: inline-block;
+margin-left: 6.5vw;
+ }
+ #btn2{
+display: inline-block;
+margin-left: 1.5vw;
+ }
+ #btn3{
+display: inline-block;
+margin-left: 1.5vw;
+ }
+ .switch-field label {
+  
+  color: white;
+  font-size: 28px;
+  font-family:sans-serif;
+  width:70vh;
+  height:8vh;
+  line-height: 1.7;
+  text-align: center;
+  overflow-y:auto;
+  padding: 16px; 
+  justify-content:center;
+  align-items:center;
+  border:none;
+  border-radius:4px;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
+  transition: all 0.1s ease-in-out;
+}
+
+}
+@media (min-width:1920px){
+   #btn1{
+display: inline-block;
+margin-left: 6.5vw;
+ }
+ #btn2{
+display: inline-block;
+margin-left: 1.5vw;
+ }
+ #btn3{
+display: inline-block;
+margin-left: 1.5vw;
+ }
+ .switch-field label {
+  
+  color: white;
+  font-size: 30px;
+  font-family:sans-serif;
+  width:70vh;
+  height:8vh;
+  line-height: 1.7;
+  text-align: center;
+  overflow-y:auto;
+  padding: 16px; 
+  justify-content:center;
+  align-items:center;
+  border:none;
+  border-radius:4px;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
+  transition: all 0.1s ease-in-out;
+}
+
+}
+
 
 
 
